# Visual-SLAM

./: CMakeLists.txt  README.md  Visual-SLAM.pro  framedata.cpp  framedata.h  main.cpp  package.xml  text
include/visual_slam/: GraphManager.h  MatchingResult.h  definitions.h  edge.h  framedata.h  myHeader.h  myheader.h  robot_pose.h
include/visual_slam/Feature_Extraction/: CVORBFeatureExtractorAndDescriptor.h  CVSIFTFeatureExtractorAndDescriptor.h  FeatureExtractorAndDescriptor.h  pclfeaturedescriptor.h  pclfeatureextraction.h
include/visual_slam/Feature_Matching/: FeatureMatcher.h  cvflannfeaturematcher.h
include/visual_slam/Loop_Closure/: CVFeatureBasedLoopClosureDetector.h  LoopClosureDetector.h
include/visual_slam/Map_Optimization/: g2omapoptimizer.h
include/visual_slam/Pose_Optimization/: G2O_Pose_Optimizer.h  Graph_Based_Pose_Optimizer.h  Graph_Based_Pose_Optimizer.h.autosave  Pose_Optimizer.h
include/visual_slam/Transformation_Estimation/: PCL3DRANSACTransformationEstimator.h  PCL3DRANSACTransformationEstimator.h.autosave  TransformationEstimator.h
include/visual_slam/Utilities/: EigenUtilites.h  LogFile.h  OpenCVUtilities.h  ROSUtilities.h  TUMUtilities.h
include/visual_slam/custom_types/: edge_pose_landmark_reproject.h  edge_pose_pose.h  math_functions.hpp  vertex_landmarkxyz.h  vertex_pose.h
launch/: visual_slam.launch
nodes/: Mapping.cpp  Transformation_Estimation.cpp  tumpointcloudpublisher.cpp
src/: Feature_Ext_Mat.cpp  GraphManager.cpp  MatchingResult.cpp  Transformation.cpp  Transformation_Estimation_Node.cpp  Transformation_Estimation_RANSAC.cpp  framedata.cpp  myHeader.cpp  myheader.cpp  robot_pose.cpp  transformation_tests.cpp
src/Feature_Extraction/: CVORBFeatureExtractorAndDescriptor.cpp  CVSIFTFeatureExtractorAndDescriptor.cpp  pclfeatureextraction.cpp
src/Feature_Matching/: cvflannfeaturematcher.cpp
src/Loop_Closure/: CVFeatureBasedLoopClosureDetector.cpp
src/Map Optimization/: g2omapoptimizer.cpp
src/Map_Optimization/: g2omapoptimizer.cpp
src/Pose_Optimization/: G2O_Pose_Optimizer.cpp
src/Transformation_Estimation/: PCL3DRANSACTransformationEstimator.cpp
src/Utilities/: EigenUtilites.cpp  OpenCVUtilities.cpp  PCLUtilities.cpp  TUMUtilities.cpp
src/custom_types/: camera_projection.cpp  edge_pose_pose.cpp
visual_slam/: CMakeLists.txt  package.xml
visual_slam/include/visual_slam/: GraphManager.h  OpenNIListener.h  definitions.h  definitions.h.autosave  framedata.h  robot_pose.h  se3.h
visual_slam/include/visual_slam/Feature_Extraction/: CVORBFeatureExtractorAndDescriptor.h  CVSIFTFeatureExtractorAndDescriptor.h  CVSURFFeatureExtractorAndDescriptor.h  FeatureExtractorAndDescriptor.h  pclfeaturedescriptor.h  pclfeatureextraction.h
visual_slam/include/visual_slam/Feature_Matching/: cvflannfeaturematcher.h
visual_slam/include/visual_slam/IterativeClosestPoint/: IterativeClosestPoint.h
visual_slam/include/visual_slam/Loop_Closure/: CVFeatureBasedLoopClosureDetector.h
visual_slam/include/visual_slam/Map_Optimization/: g2omapoptimizer.h
visual_slam/include/visual_slam/Pose_Optimization/: G2O_Pose_Optimizer.h  Graph_Based_Pose_Optimizer.h
visual_slam/include/visual_slam/Transformation_Estimation/: PCL3DRANSACTransformationEstimator.h  TransformationEstimator.h
visual_slam/include/visual_slam/Utilities/: EigenUtilites.h  LogFile.h  OpenCVUtilities.h  PCLUtilities.h  ROSUtilities.h  TUMUtilities.h  eigenutilities.h  tumutilities.h
visual_slam/include/visual_slam/custom_types/: camera_projection.h  draw_functions.hpp  edge_pose_pose.h  se3.h  vertex_pose.h
visual_slam/launch/: visual_slam.launch
visual_slam/nodes/: Mapping.cpp  Mapping.cpp.autosave  Transformation_Estimation.cpp
visual_slam/src/: Feature_Ext_Mat.cpp  GraphManager.cpp  Mapping.cpp  OpenNIListener.cpp  Trajectory_Estimation.cpp  Transformation_Estimation.cpp  Transformation_Estimation_RANSAC.cpp  alignment_prerejective.cpp  framedata.cpp  robot_pose.cpp  se3.cpp  transformation_tests.cpp
visual_slam/src/Feature_Extraction/: CVORBFeatureExtractorAndDescriptor.cpp  CVSIFTFeatureExtractorAndDescriptor.cpp  CVSURFFeatureExtractorAndDescriptor.cpp  pclfeaturedescriptor.cpp  pclfeatureextraction.cpp
visual_slam/src/Feature_Matching/: cvflannfeaturematcher.cpp
visual_slam/src/IterativeClosestPoint/: IterativeClosestPoint.cpp
visual_slam/src/Loop_Closure/: CVFeatureBasedLoopClosureDetector.cpp
visual_slam/src/Map_Optimization/: g2omapoptimizer.cpp
visual_slam/src/Transformation_Estimation/: PCL3DRANSACTransformationEstimator.cpp
visual_slam/src/Utilities/: EigenUtilites.cpp  LogFile.cpp  OpenCVUtilities.cpp  PCLUtilities.cpp  ROSUtilities.cpp  TUMUtilities.cpp  eigenutilites.cpp  tumutilities.cpp
visual_slam/src/custom_types/: edge_pose_pose.cpp  se3.cpp  vertex_pose.cpp
visual_slam_msgs/: CMakeLists.txt  package.xml
visual_slam_msgs/msg/: Scene.msg  scene.msg
